Noteworthy changes in version 0.0.10 (unreleased)
------------------------------------------------

 * Respect coding cookie in file dictionaries (Issue#10).
 * Change DictEdit preedit format to make Firefox forms happy.

Noteworthy changes in version 0.0.9 (2012-01-25)
------------------------------------------------

 * Import skk.1 manual page from Debian.
 * Adopt code coverage testing with lcov.
   To enable, pass --enable-code-coverage to configure.
 * Support running test cases under valgrind.
   To enable, pass --enable-valgrind-tests to configure.

Noteworthy changes in version 0.0.8 (2012-01-11)
------------------------------------------------

 * Fix user dictionary handling (ibus-skk Issue#44).

Noteworthy changes in version 0.0.7 (2012-01-05)
------------------------------------------------

 * Improve candidate list traversal with "x" and SPC keys.
 * Reduce the number of property notifications for performance.

Noteworthy changes in version 0.0.6 (2011-12-28)
------------------------------------------------

 * Support re-conversion based on surrounding text.

Noteworthy changes in version 0.0.5 (2011-12-25)
------------------------------------------------

  * Fix buffer overrun when using skkserv (Issue#2).

Noteworthy changes in version 0.0.4 (2011-12-20)
------------------------------------------------

  * Improve kanagaki input okuri-ari conversion.

Noteworthy changes in version 0.0.3 (2011-12-20)
------------------------------------------------

  * Support (concat ...).

Noteworthy changes in version 0.0.2 (2011-12-16)
------------------------------------------------

  * New test tool "skk".

Noteworthy changes in version 0.0.1 (2011-11-30)
------------------------------------------------

  * First release of libskk.

Copyright (C) 2011-2012 Daiki Ueno <ueno@unixuser.org>
Copyright (C) 2011-2012 Red Hat, Inc.

This file is free software; as a special exception the author gives