@@ -1,4 +1,4 @@
 libskk/context.vala
 libskk/state.vala
-tools/tool.vala
-
+tools/skk.vala
+tools/fep.vala
