@@ -34,29 +34,44 @@ skk_CFLAGS =					\
 	-DLOCALEDIR=\"$(datadir)/locale\"	\
 	$(NULL)
 skk_LDADD = $(top_builddir)/libskk/libskk.la $(LIBSKK_LIBS)
-skk_SOURCES = tool.vala
+skk_SOURCES = skk.vala
 
 dist_man_MANS = skk.1
 
 if ENABLE_FEP
-skk_VALAFLAGS += --pkg libfep-glib -D ENABLE_FEP
-skk_CFLAGS += $(LIBFEP_CFLAGS)
-skk_LDADD += $(LIBFEP_LIBS)
-skk_SOURCES += fep.vala
+pkglibexec_PROGRAMS = fep
+fep_VALAFLAGS =					\
+	--vapidir=$(top_srcdir)/libskk		\
+	--vapidir=$(top_srcdir)/tools		\
+	--pkg config				\
+	--pkg skk-1.0				\
+	--pkg libfep-glib			\
+	$(VALAFLAGS)
+fep_CFLAGS =					\
+	-I$(top_srcdir)				\
+	$(LIBSKK_CFLAGS)			\
+	$(LIBFEP_CFLAGS)			\
+	-DDATADIR=\"$(datadir)\"		\
+	-DPKGDATADIR=\"$(pkgdatadir)\"		\
+	-DLOCALEDIR=\"$(datadir)/locale\"	\
+	$(NULL)
+fep_LDADD = $(top_builddir)/libskk/libskk.la $(LIBSKK_LIBS) $(LIBFEP_LIBS)
+fep_SOURCES = fep.vala
 dist_man_MANS += skkfep.1
 
-EXTRA_DIST = skkfep.in skkfep.wrapper.in
+EXTRA_DIST = skkfep.in fep.wrapper.in
 bin_SCRIPTS = skkfep
-libexec_SCRIPTS = skkfep.wrapper
+libskklibexecdir = $(pkglibexecdir)
+libskklibexec_SCRIPTS = fep.wrapper
 
 skkfep: skkfep.in
 	$(AM_V_GEN) sed -e "s!@FEP\@!"$(FEP)"!" \
-	-e "s!@libexecdir\@!"$(libexecdir)"!" \
+	-e "s!@WRAPPER\@!"$(pkglibexecdir)/fep.wrapper"!" \
 	$< > $@.tmp && \
 	mv $@.tmp $@
 
-skkfep.wrapper: skkfep.wrapper.in
-	$(AM_V_GEN) sed -e "s!@bindir\@!"$(bindir)"!" \
+fep.wrapper: fep.wrapper.in
+	$(AM_V_GEN) sed -e "s!@FEP\@!"$(pkglibexecdir)/fep"!" \
 	$< > $@.tmp && \
 	mv $@.tmp $@
 endif
